# gitMC

./: .appveyor.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .travis.yml  AGENTS.md  ActOnChanged.py  AddGithubMembers.py  CITATION  CountGithubForks.py  CountGithubStars.py  CreateGithubTeamRepos.py  DuplicateGithubRepos.py  ListAllGithubRepos.py  ListUserGithubRepos.py  MANIFEST.in  README.md  README.rst  RemoveCollaborators.py  SetArchive.py  azure-pipelines.yaml  azure-pipelines.yml  branch.py  check.py  codemeta.json  fetch.py  find_matching_file.py  find_missing_file.py  git_filemode_windows  git_filemode_windows.py  gitbranch  gitbranch.py  gitemail.py  gitemailamend.py  gitemailamend.sh  gtbrrpt  gtft  gtft.py  gtpl  (+12 more)
.github/workflows/: ci.yml  codeql-analysis.yml  publish-python-package.yml
docs/: branch.html  email.html  git.html  github_base.html  github_repo_stats.html  index.html  pull.html  push.html
examples/: pre-commit
gitutils/: __init__.py  amender.sh  branch.py  email.py  find.py  git.py  github.py  github_base.py  github_duplicator.py  github_repo_stats.py  pull.py  push.py  runner.py
gitutils/tests/: test_branch.py  test_find.py  test_modified.py  test_pull.py  test_scripts.py
pygitutils/: __init__.py
scripts/: git_zombie.py  pre-commit
src/gitutils/: __init__.py  __main__.py  branch.py  email.py  find.py  git.py  git_email.py  pull.py  push.py  runner.py  status.py  status_cmd.py
src/gitutils/tests/: conftest.py  test_branch.py  test_email.py  test_find.py  test_modified.py  test_pull.py  test_scripts.py
tests/: test.py  test_all.py  test_branch.py  test_find.py  test_github.py  test_modified.py  test_pull.py  test_scripts.py
