[metadata]
name = gitutils
version = 1.3.2
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = concurrent, pipelined, platform-agnostic Git utilities for managing a large number of Git repositories
url = https://github.com/scivision/gitMC
keywords =
  concurrent
  asynchronous
  asyncio
  git
  GitHub
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
zip_safe: false
scripts =
  ActOnChanged.py
  branch.py
  check.py
  CountGithubForks.py
  CountGithubStars.py
  fetch.py
  find_missing_file.py
  gitemail.py
  ListUserGithubRepos.py
  modified.py
  pull.py
  RemoveCollaborators.py
  SetArchive.py

install_requires =
  colorama

[options.extras_require]
tests =
  pytest >= 3.9
  pytest-asyncio
cov =
  pytest-cov
  coveralls
  flake8
  mypy
github =
  pandas
  numpy
  pygithub

[options.entry_points]
console_scripts =
  gitbranch = branch:main
  gitmodified = modified:main
  gitpull = pull:main
  gitfetch = fetch:main
  gitcheck = check:main
  find_missing_file = find_missing_file:main
  ActOnChanged = ActOnChanged:main
  ListUserGithubRepos = ListUserGithubRepos:main
  CountGithubStars = CountGithubStars:main
  gitemail = gitemail:main
