[metadata]
name = gitutils
version = 1.5.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = concurrent, pipelined, platform-agnostic Git utilities for managing a large number of Git repositories
url = https://github.com/scivision/gitMC
keywords =
  concurrent
  asynchronous
  asyncio
  git
  GitHub
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
zip_safe: false
scripts =
  ActOnChanged.py
  branch.py
  check.py
  fetch.py
  find_missing_file.py
  gitemail.py
  modified.py
  pull.py
install_requires =


[options.extras_require]
tests =
  pytest >= 3.9
  pytest-cov
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy


[options.entry_points]
console_scripts =
  gitbranch = branch:main
  gitmodified = modified:main
  gitpull = pull:main
  gitfetch = fetch:main
  gitcheck = check:main
  find_missing_file = find_missing_file:main
  ActOnChanged = ActOnChanged:main
  gitemail = gitemail:main
