[metadata]
name = gitutils
version = 1.7.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = concurrent, pipelined, platform-agnostic Git utilities for managing a large number of Git repositories
url = https://github.com/scivision/gitMC
keywords =
  concurrent
  asynchronous
  asyncio
  git
  GitHub
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
install_requires =
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy


[options.entry_points]
console_scripts =
  gitbranch = gitutils.__main__:git_branch
  gitstat = gitutils.status:cli
  gitpull = gitutils.__main__:git_pull
  gitfetch = gitutils.__main__:git_fetch
  gitcheck = gitutils.__main__:git_check
  find_matching_file = gitutils.__main__:find_match
  find_missing_file = gitutils.__main__:find_missing
  ActOnChanged = gitutils.__main__:ActOnChanged
  gitemail = gitutils.__main__:git_email
